Agredando estructura basica html

--- a/Template.html
+++ b/Template.html
@@ -8,24 +8,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Plantilla</title>
+    <title>Mi primera pagina Web</title>
   </head>
   <body>
 
+    <h1 style="color: aqua; background: red; font-weight: bold;">Hola a Todos</h1>
+
+    <p style="color: salmon; font-weight: bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis et aliquid eius deserunt! Cumque nesciunt sunt quia repudiandae perspiciatis sit autem. Sed maxime dolorum dicta dolor suscipit nobis totam porro.</p>
+
     
-    
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
