--- a/Template.html
+++ b/Template.html
@@ -12,7 +12,9 @@
   </head>
   <body>
 
-    <h1 style="color: aqua; background: red; font-weight: bold;">Hola a Todos</h1>
+    <div class="container">
+      <h2>Dwight Alfaro Mendoza</h2>
+    </div>
     <h1>Hola soy de barrio</h1>
     <p style="color: salmon; font-weight: bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis et aliquid eius deserunt! Cumque nesciunt sunt quia repudiandae perspiciatis sit autem. Sed maxime dolorum dicta dolor suscipit nobis totam porro.</p>
 
