--- a/Template.html
+++ b/Template.html
@@ -14,6 +14,8 @@
 
     <div class="container">
       <h2>Dwight Alfaro Mendoza</h2>
+      <h1>Hola Mundo</h1>
+      <h3>Hola vendo empanadas</h3>
     </div>
     <h1>Hola soy de barrio</h1>
     <p style="color: salmon; font-weight: bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis et aliquid eius deserunt! Cumque nesciunt sunt quia repudiandae perspiciatis sit autem. Sed maxime dolorum dicta dolor suscipit nobis totam porro.</p>
