Agregamos texto de experimento

--- a/Template.html
+++ b/Template.html
@@ -12,6 +12,9 @@
   </head>
   <body>
 
+    <header>
+      <div class="colapsando">Probando</div>
+    </header>
     <div class="container">
       <h2>Dwight Alfaro Mendoza</h2>
       <h1>Hola Mundo</h1>
@@ -19,7 +22,11 @@
     </div>
     <h1>Hola soy de barrio</h1>
     <p style="color: salmon; font-weight: bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis et aliquid eius deserunt! Cumque nesciunt sunt quia repudiandae perspiciatis sit autem. Sed maxime dolorum dicta dolor suscipit nobis totam porro.</p>
-
+    <footer>
+        <div>
+          <p>Este es un experimento en nuestra rama "Experimentando"</p>
+        </div>
+    </footer>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
